--- a/BDMuestras/Usuarios.resx
+++ b/BDMuestras/Usuarios.resx
@@ -273,12 +273,103 @@
   <metadata name="muestrasHornosDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="muestrasHornosDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <metadata name="usuariosTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>376, 17</value>
   </metadata>
+  <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAFLZJREFUeF7tnS2wFscShiMQCAQCEYFAHBGBQCAQEYgIBCLiCgQCgYiIiEBERFAV
+        EYGIiIiIQCAQEREIBAIRcQUCccUVCEQEIgKBQFCV3KfP9nIJdTjszPTuzs/7VE19J+RMT3dP9/t93579
+        +UQIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGE
+        EEIIId7y119/nWVc//vvv2/z+gvjAeMJ47mPx4z7jDuMW4yr/O5Jny7EkVAjJxhfUC/feO3cY1gtPWNY
+        XT1lPGT84rV3k3Hg08WakOhLjO8ZT0l+Msx7zTChsE0762bF4FAaZ6iH6wx7w3g1VUsazDOBuMOPlxkn
+        3LQohWSeJLGmxi8s0ZFg8xEvl30pMRjs/QVqwN4Q3hwWRBDY+5OX24zTvpRIheSdIJH2Th3e+O/DGiYE
+        F3xp0Tns9wHj12n314M1XjJu8aO+eqZA0q4xnk1p3A7W/I2Xc+6G6Az29lP2+C4j9B3/Y7DeC8ZX7ob4
+        EOTK3vV/mNK2D7ZZvHzuLolOYE8/Y283f1N5F9a/x4s+DRwFiTlFgh4eZmpn8MPeIW64a6Jx2M8rjKyD
+        e9Hgx795+dRdEwZJse9k/51SVA/4ZJ9GdES3YdhDO4C86Uf+j4E/9pXgors4NiTCmt+OmlYJvtnBIolA
+        g7B3P067WB/49opxyV0dE/JgH/ure+d/H4lAe9Tc/DP4aJ8ExjwfhfjtgF8V3/mXIBFohxaafwZfn/By
+        yl0fBwLf9Wh/DhKB+mmp+Wfw+b67PwYEfM1jbw6JQL202Pwz+H7Lw+gbYrWP/iF/j8WOndv/iPEN/3mZ
+        1/O8nrPBz3bdwFWGXdAR+vdf7EkEKoM9CW1+7Nn3cztp6Cv+0y4Ousir1Zad6/8l41v+zS4Kes3PxWDn
+        JS/9nzpMoDenkPPBhm2ONf3i7078rp33bWf6hYAtiUAlsBdhzY+tx7wsvj6E3z3JuMG84jcZi8PN9gkx
+        2oU9pef220UW2WdTMdeEIOtqwvfBjkRgZ6xppt0oAzvPecm+MIy59sn2a0b2OQfMtU8T/Z6KToD2rp0F
+        c+1Mri/dVBHYsT8/2mmZxWBHIrAT5D6q+e1isDNutgjs2FfR7PNamHvXTfUHwWW9+zNvlZMmsBlVQBKB
+        jQncu594Cd077Nl1B7m1/obR37kBBHXJY8wh5J3/KPBLItAYgXu22nduzH+O/ayvA8y76Wb6gaC+9/hS
+        ue0mViOwoCQCKxO4V6sfcGONrAPezHvgJvqBoJIPvDHHPkZtcvmkFcS0ahnYkQisROAebXa0nbVy6t4O
+        BvZz2TABnZ1CS4N5m34UssLwpYvAjkQgmMC92fRPbSz5xbRyGvh51U20D8HY3XuTYI6dGLF5EwUWmkQg
+        iMA92eXv7Kz7H3dhMcz5yae3D/HY3+6TIAG7nR8dWHASgUIC92KX5jdYO/m6F+b0c30Awdg91JNgznWf
+        vgtWMO5KEdiRCGQSuAe7Nb+BC59PniwHnx/79PYhmAceVwq736U3sAAlAokE5n7X5jdw4/TkzXLw+5lP
+        bx+CsWueUwk5M6uUwEKUCCwkMOe7N/8MviTdk5Dff+lT24dg/vC4FsHvv/GpVWCF5K4VgR2JwEcIzHU1
+        zW/gj11rkIRPbZ8egg8sTInABwjMcVXNb/TQA9kQvF1imUp1V0UFFqhE4D0Cc1td8xvu3mKI4w+f2j4E
+        c9/jSqHKh3MEFqpEwAnMaZXNj1/JJ8Ix56lPb5+cDWbOdz69OnLiOQrsDC8CgbmssvkNfMs5Ee6RT28f
+        grEHJCbBnN99epVYwbmrRWBnWBEIzGG1zW/gX/K9J5jTz30BCOaqx7UY5tillFU/QskKb/K2DOwMJwKB
+        uau6+XHR7oKVfIMQ5lT7CTgZ4rEkJN88kTm/uIlqsQJ0d4vAzjAiEJizqpvfwMfv3N1U+npcPYlIPhuQ
+        OXZ3lAM3US1WiO5yEdjpXgQCc1V98+Pmafy0i9qSYE4/fwGYIajcmyP8zkv1TWEFOXlcBna6FYHAHFXf
+        /AZ+Zt2Fmnk/u4l+IKisewIYzG3igIgVprtcBHa6E4HA3LTS/Ll3wLIYr7iZviCwnBOCZr51M1UTWOjd
+        iEBgTlpp/pK7X292F6zNITB7qko2llg3VTWBBd+8CATmovvmN2y+m+oTAiz5FCARaIjAHIzS/PZ0oS6P
+        /7yFAC8cRluAJdrNVU1gAzQnAoGxD9H8BjZ2vQnOZhBo8TP6LOFurmqsgN3lIrDTjAgExjxS8/dz7v/H
+        INgDRukzAiUCFRIY60jNb0++uugmx4C4s5+c8i62AW6yavCzexEIjHGY5jewc81NjgWx35hSUIZthJus
+        msAGqU4EAmMbqvlh9SdfVQ2JTL5l8lHYhrjJqglslGpEIDCm0d75+7n1dy7kwZ6rbsVcjG2Mm60aK3R3
+        uQjP264iEBjLaM1vp7ifcrNjQyIkApl43nYRgcAY1PyjQ0IkApl43jYVgUDf1fxigsRIBDLxvG0iAoE+
+        q/nFPyFBEoFMPG+rikCgr2p+cTQkSiKQiedtFREI9FHNL46HhEkEMvG8hYpAoG9qfrEMEicRyMTzFiIC
+        gT6p+UUaJFAikInnrUgEAn1R84s8SKREIBPPW5YIBPqg5hdlkFCJQCaetyQRCFxbzS9iILESgUw8b4tE
+        IHBNNb+IhQRLBDLxvB0rAoFrqfnFOpBoiUAmnrcjRSBwDTW/WBcSLhHIxPP2DxEItK3mF9tA4iUCmXje
+        DkUg0KaaX2wLGyARyMTyFmhLzS/2gY2QCOyI+eJuVY3trbtcBHbU/LXBhkgEdsB8cHeqxvbUXS4CO2r+
+        WmFjJAIbYmu7G1Vje+kuF4EdNX/tsEESgQ2wNX35qrE9dJeLwI6avxXYKInAithavmzV2N65y0VgR83f
+        GmyYRGAFbA1frmpsz9zlIrCj5m8VNk4iEIjZ9mWqxvbKXS4CO2r+1mEDJQIBmE03XzW2R+5yEdhR8/cC
+        GykRKMBsudmqsb1xl4vAjpq/N9hQiUAGZsPNVY3tibtcBHbU/L3CxkoEErC5bqZqbC/c5SKwo+bvHTZY
+        IrAAm+PTq8b2wF0uAjtq/lFgoyUCx2C/69OqxnLvLheBHTX/aLDhI4rAd4w37vaR8P9/8F+vGsu5u1wE
+        dtT8o8LGDycCuHoBX59OXv8f/u05L5f916rGcj15XQZ21PyjQwEMJwIG7p7B3yuMq4yz/s/VYzmesl0G
+        dtT8YoJCGFIEWkPNL1aDgpAIVIyaX6wOhSERqBA1v9gMCkQiUBFqfrE5FIpEoALU/GI3KBiJwI6o+cXu
+        UDgSgR1Q84tqoIAkAhui5hfVQSFJBDZAzS+qhYKSCKyIml9UD4UlEVgBNb9oBgpMIhCIml80B4UmEQhA
+        zS+ahYKTCBSg5hfNQ+FJBDJQ84tuoAAlAgmo+UV3UIgSgQWo+UW3UJASgWNQ84vuoTAjReBrN9s8xHLd
+        wypCzS+qhwINEQFs2N17L7jZZiGGT4nl5WFQBaj5RTNQqFEi8NRNNgsx3PNwslHzi+agYKO+Dpxxk01C
+        Dore/dX8olko3GIRYP4VN9cc+H7gYWSh5hfNQxEXPaGX+VfdVHPg+3kPIwvmm3iecHNCtEVp8xvYaOah
+        HUeB/688lCwkAqJJgpr/uZtrFmJ44OFkIxEQTRHR/E4Tz+o7DnJxwHjt8WQjERBNENX82GniKb1LIJZb
+        HlYREgFRNYHN38Tz+VMIzI1EQNSHmv/jSAREl6j5lyMREF2h5k9HIiC6QM2fj0RANI2avxyJgGgSNX8c
+        EgHRFGr+eCQCognU/OshERBVo+ZfH4mAqBI1/3ZIBERVqPm3RyIgqkDNvx8SAbErav79kQiIXVDz14NE
+        QGyKmr8+JAJiE9T89SIREKui5q8fiYBYhVGbH3/tfn3n/T+bIHCvJAJivObHVXtW3z3G2yf28PMrxkN+
+        /Mx/rWos15PnZWBHIjAygYXURPPj53XGBx/Vxf97zfjKf71qLOfudhHYkQiMSGABtdL8i5/Pb7/r06om
+        cA8lAiMRWDjdNf+MzfHpVRO4lxKBEQgsmG6bf8bmupmqCdxTiUDPBBZK980/YzbcXNUE7q1EoEcCC2SY
+        5p8xW262agL3WCLQE4GFMVzzz5hNN181gXstEeiBwIIYtvlnzLYvUzWBey4RaJnAQhi++WdsDV+uagL3
+        XiLQIoEFoOZ/D1vLl62awBqQCLRE4Mar+T+ArenLV01gLUgEWiBww9X8H8HWdjeqJrAmJAI1E7jRav6F
+        mA/uTtUE1oZEoEYCN1jNn4j54m5VTWCNSARqInBjh2p+7PzuxVyM+eTuVY3tsbtchOdNIrA3gRs6XPPz
+        copxwou5GPPN3awa22t3uQjPm0RgLwI3csjmd7N2kxCJQCaeN4nA1gRu4NDNP8O/SQQy8bxJBLYicOPU
+        /O/A/5MIZOJ5kwisTeCGqfmPgN+RCGTieZMIrEXgRqn5j4HflQhk4nmTCEQTuEFq/gUwRyKQiedNIhBF
+        4Mao+RNgrkQgE8+bRKCUwA1R82eADYlAJp43iUAugRuh5i8AWxKBTDxvEoFUAjdAzR8ANiUCmXjeJAJL
+        CUy8mj8QbEsEMvG8SQQ+RmDC1fwrwBoSgUw8bxKBDxGYaDX/irCWRCATz5tE4H0CE6zm3wDWlAhk4nmT
+        CMwEJlbNvyGsLRHIxPMmEbCNn1JShm2Mm6yawHh3bf4ZfJAIZGJ23OSYkIArjDeej2xaSSR+dtX8M/gi
+        EcgEOzfd5FgQ+2cE/2pKQz62EW6yaqyw3eUisFNV88/gk0QgA2zYG+BlNzkGBPwpgT87zEABtgFusmqs
+        oN3lIrBTZfPP4JtEIANs/Mk4cJP9Q7B3PfZsLPFurmrwc4jmn8FHiUAG2Hjs5vqGQA8YRd/7LeFurmrw
+        c6jmn8FXiUAG2Lji5vqltDAs0W6qaqxw3eUisNNU88/gs0QgEeY/dVN9QowXplDzsAS7qaqxgnWXi8BO
+        k80/g+8SgXRuuKn+IDkPPMhkmPuTm6kaK1R3uQjsNN38M8QgEUiAuXZwvL8ThAjqDMFlffdn3kNeqk+K
+        FejkcRnY6aL5Z4hlRBEoOdDd358FSch1Dy4J5v2Xl+qbwQpz8rgM7HTV/DPENJQI4KbFa3uZDPPuuJl+
+        IKj7Hl8qF9xEtVhBuq9FeMF01/wzxDaUCODjWcZrd3kxzHnmJvqAmGzjk8/6Y86vbqJa8FHNnwAxjiYC
+        d9zdJJjXz4lBxPPFFFYatSfBCtBdLQI7QzT/DLEOIwK4eBofc978brmJ9rFN8rgWw5wnPr1KcmI6CuwM
+        1fwzxDyMCOTEyZy7Pr19CCb5YxBzvvfp1WEF524WgZ0hm3+G2IcQAXy76W4uhjkPfXr7EMw9j2sxzKny
+        tEgrNHexCOwM3fwz5KB7EcC1zyYPl0MsVX8CToJgHntcKZzz6dVgBea+FYEdNf87kIsRRCAJ4njuU9uH
+        YHIu/a3qxB8rLPerCOyo+Y+AnHQtAvj0h7u3GJ/aPqnB8/tvfGoVWEG5a0VgR81/DOSmWxHAn+fu2mJ8
+        avsQ/FOPKYXTPn1XrJDcnyKwo+ZfADnqUgTw5aW7tQh+/5VPbR+CsXP5k2DOeZ++G1ZA7k4R2FHzJ0Cu
+        uhIB3Dg1ebMc/O7qGEDyhRHM+ZdP3wUrHHelCOyo+TMgZ92IAOtfdFcWw5x+7hBEPLensJZDAnY7EcIK
+        xt0oAjtq/gLIXRciwPI59V/9afCLIZicEyFe+PRNsUJxF4rAjpo/AHLYvAiw7r/dhcUw52ef3j4Ec+Bx
+        JcG8Tb8GWIH40kVgR80fCLlsVgRYL/njv8G8a26iDwgo+VwAn7PJ+QBWGNOqZWBHzb8C5LRJEWCt5JPg
+        mGM3zumrhggq97LIr9zEalhB+HJFYEfNvyLktikRYI2rvlwSzHvkJvqBuC5P4aVBMkwNP3cz4VghTCuV
+        gR01/waQ4yZEAPPZT75a06/dIC7buKSTIWaY94IRfm8AS7QvUQR21PwbQq4jRSD8unvMFj35irl9PiWI
+        2JL/HDJDUkwELrmpIjBnBfT9ZLkM7Kj5d4CcR4qAnady0k0XgR175y9p/t/cVH8Qn90dJetTgMFcu79a
+        0X3TmW/qnHxm4lFgR82/I+Q+UgSeMIreeZl/lZH9wFvmvmHsfgbsqhDnt1O4+ZAku7bgSze5CH7fGv9H
+        RvJNGo8CO2r+CmAPIkXAGvAuI0kImHqZOTmXvP8DW9tN9gtxniTQF1PIZZgdSxo/3mDYU4fO+DK2zjmG
+        HXj81jaHEdL4BrbU/BXBXoSJgIEtEwI7eec2r1d4tVo6/HM0r/Yp9jzjGuNnRvJVfkeBndeMs4cB9Q6B
+        fu1xNwe+q/krhD0JFYGtwfcfPJQxIODk24TtjZq/btibJkUAn+3rQ3+PAzsOAravAk8OM9AAav42YI+a
+        EgF8tb8YvP3qOhQEbgfmQo4HrImavy3YqyZEAB9fMfo+6v8xSMBFRtgBumjwTc3fIOxZ1SKAb3ag8aq7
+        OzYk4hKjuk8C+GTPM1TzNwp7ZyJQ+rz+cPDJ3vnV/O9CQuxBijn3DlyL2+6aaBzq6iYj69H00eDHM8bY
+        H/s/BPk5RXJynyIcAuubOvd1Lbaw2rKTdf6cdnkfWN+O9o95wC8FkmQn72SfMpwLaz5lXHQ3RGewxXae
+        fvEZe6mwpp3k8wM/jvWnvhJIlp1xFXbq7nGwhn0su+5Li85hr68wVv+6yRrzqcVjnOG3BuTxnCcx/Dsc
+        Nu1UYrskWMo8IOz7DfY/+8q948Dubwx914+CZNpBQjuY84CR/amAuX8w7BxuO8c75BJQ0S7UwAmGHR+4
+        wyi5jNfe7R8xvmH0eT1/LZBvO4vQLr38iXGfYRf72Mf4t8cN+Nka3b7T26bYJ4jv+OcLbkKII6FODhi3
+        vGYeMuwy4bcX/PCzHSR+zrCa+5VhbybX+F/6c7EQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQ
+        QgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQwvjkk/8BEtIWpHZslqQAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
